-Add dark mode styling for mobile toggle feature - Fix columns for main grid for the hide sidebar feature

--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ p {
   padding: 25px 50px;
   border-radius: 50px;
   border: 1px solid var(--white);
-  margin-top: 550px;
+  margin-top: 500px;
   overflow: hidden;
 }
 
@@ -222,10 +222,6 @@ p {
   font-size: 16px;
   line-height: 1;
 }
-
-/* ===============================
-   END OF NAVIGATION BAR STYLING
-   =============================== */
 
 /* ===============================
      TASK BAR STYLING
@@ -491,11 +487,6 @@ html.dark .modal {
     align-items: center;
   }
 
-  .mobile-header-icon {
-    display: flex;
-    justify-items: center;
-  }
-
   /* Hide the menu content by default on mobile */
   .navigation-bar .nav-content {
     display: none;
@@ -518,6 +509,10 @@ html.dark .modal {
     padding: 16px;
   }
 
+  html.dark .navigation-bar.nav-open .nav-content {
+    background: var(--dark-lines);
+  }
+
   /* Relax clipping only when open */
   .navigation-bar.nav-open {
     overflow: visible;
@@ -528,8 +523,6 @@ html.dark .modal {
     position: absolute; /* covers only its parent */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     background: rgba(0, 0, 0, 0.5); /* dim effect */
     z-index: 500; /* higher than task cards */
   }
@@ -581,6 +574,7 @@ html.dark .modal {
     flex-direction: column;
     overflow: visible;
   }
+
   .modal {
     background-color: var(--white);
     width: 280px;
